Corrections to the contact and product service